GS-14688 java 17 support - continued fixing tests